recylerview + viewModel + livedata

--- a/study_android/test_app/app/src/main/res/values/strings.xml
+++ b/study_android/test_app/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btn_plus">plus</string>
     <string name="todo">MY TODOS</string>
+    <string name="gift">CHRISTMAX GIFT LIST</string>
 
 </resources>
